--- a/first.tex
+++ b/first.tex
@@ -13,7 +13,7 @@ The question in front of us has implications for many different
 things. I, however, am mostly concerned with coming to terms with the
 foundations of quantum mechanics. I am \emph{still} hung up on the
 question of what quantum physics means for us (i.e.\ what
-philosophical lessons it has), and I will take any help I can get.
+philosophical lessons it offers), and I'll take any help I can get.
 
 There are two groups of philosophers who are prepared to offer me
 help. Each group has a core doctrine; and interestingly enough, these
