--- a/first.tex
+++ b/first.tex
@@ -1,19 +1,20 @@
 \documentclass[12pt]{article}
-\title{Something-First Methodologies}
+\title{Methodologies that put something first}
 \author{Hans Halvorson}
 \date{\today}
 \begin{document}
 
 \maketitle
 
-Metaphysics first, or mathematics first? The simple answer is
-\emph{neither}. But I should explain.
+Metaphysics first? Mathematics first? Language first? The simple
+answer is \emph{none of the above}. But I should explain.
 
-The question in front of us has implications for many different
-things. I, however, am mostly concerned with coming to terms with the
-foundations of quantum mechanics. I am \emph{still} hung up on the
-question of what quantum physics means for us (i.e.\ what
-philosophical lessons it offers), and I'll take any help I can get.
+The question of what to put first has implications for a wide range of
+philosophical issues. But I will focus the inquiry around the
+foundations of quantum mechanics. I am still hung up on the question
+of what quantum physics means for us (i.e.\ what the philosophical
+takeaway of such a strange theory is), and I'll take any help I can
+get.
 
 There are two groups of philosophers who are prepared to offer me
 help. Each group has a core doctrine; and interestingly enough, these
@@ -25,19 +26,20 @@ lesson of quantum physics.\footnote{I must qualify. While
   ``metaphysics first'' is usually thought to lead uniquely to Bohmian
   mechanics, there are recent arguments to the effect that
   ``metaphysics first'' might rather lead to wavefunction realism.} It
-behooves us, then, to ask whether we are willing to adopt one of these
-``m\dots\ first'' ideologies.
+behooves us, then, to look into the credentials of these ``m\dots\
+first'' doctrines.
 
 \section{Mathematics first}
 
-It's an easier task to describe the ``mathematics first'' ideology, as
-that has already been done quite clearly by David Wallace. In fact,
-Wallace's paper has the subtitle ``mathematics-first approaches to
-physics and metaphysics'' and he indicates clearly that he believes
-this to be the right approach. If one knows Wallace's other work, and
-its beautiful systematicity, one will also become convinced that the
-mathematics-first approach leads uniquely to the Everett
-interpretation of quantum mechanics.
+It's an easier task to describe the ``mathematics first'' doctrine, as
+that has already been done quite clearly by its proponent David
+Wallace \citep{wallace2022}. In fact, Wallace's paper has the subtitle
+``mathematics-first approaches to physics and metaphysics'' and he
+indicates clearly that he believes this to be the right approach. If
+one is familiar with Wallace's other work, and its beautiful
+systematicity, it will also be clear that the mathematics-first
+approach entails that the Everett interpretation is the unique correct
+understanding of quantum mechanics.
 
 \section{Metaphysics first}
 
