--- a/first.tex
+++ b/first.tex
@@ -6,6 +6,8 @@
 
 \maketitle
 
+TO DO: Maudlin on canonical presentation
+
 Metaphysics first? Mathematics first? Language first? The simple
 answer is \emph{none of the above}. But I should explain.
 
