--- a/math-theorizing.tex
+++ b/math-theorizing.tex
@@ -12,6 +12,8 @@
 
 %% careful about wild wild west
 
+%% Hellman: assertoric theories 
+
 %% what is the content learned in a course / contained in a textbook?
 
 %% suppes set-theoretic predicates
