--- a/master.bib
+++ b/master.bib
@@ -4,3 +4,23 @@
   year =	 1990,
   publisher =	 {Springer},
 }
+
+@article{russell1913,
+  author =	 {Bertrand Russell},
+  title =	 {On the notion of cause},
+  journal =	 {Proceedings of the Aristotelian Society},
+  volume =	 13,
+  number =	 1,
+  pages =	 {1--26},
+  year =	 1913,
+  url =
+                  {https://academic.oup.com/aristotelian/article/13/1/1/1772124}
+}
+
+@book{salmon1984,
+  title =	 {Scientific explanation and the causal structure of
+                  the world},
+  author =	 {Salmon, Wesley C},
+  year =	 1984,
+  publisher =	 {Princeton University Press}
+}
