adding to bohr-causality

--- a/bohr-causality.tex
+++ b/bohr-causality.tex
@@ -20,14 +20,20 @@
 
 \maketitle
 
+\afsnit Keywords: bevarelsessætning, årsag
+
 \afsnit To Do: Go through NBFS: årsag ... and conservation
-principles. bevarings... 
+principles. bevarings...
+
+\afsnit Principle of Sufficient Reason
 
 \afsnit To read: Hartry Field, John Norton, Stanford Encyclopedia,
 Schlick, Die Kausalität in der gegenwärtigen Physik; Hans Reichenbach
 "Die Kausalstruktur der Welt" (Sitzungsbericht der bayer. Akademie der
 Wissenschaften, Mathematisch-physikalische Klasse, 1925, Seite 133),
 Ned Hall
+
+Ben Menahem, Causation in Science 
 
 \url{https://seop.illc.uva.nl/entries/causation-physics/}
 
@@ -49,20 +55,20 @@ D.H. Mellor, Real Metaphysics
 \afsnit While I don't know about \emph{all} human languages, in the
 Indo-European languages, the notion of cause and effect plays a
 central role. For example, it has been established beyond a reasonable
-doubt that smoking \underline{causes} cancer. In contrast, I didn't
-\underline{cause} the Danish national soccer team to win the European
-cup in 1992 by fervently wishing that they would do so.
+doubt that smoking \underline{causes} cancer. In contrast, Hans
+wishing that the Danish soccer team would win the 1992 Euro
+championship did not \underline{cause} them to win.
 
-As with so many other things, there are two extreme views that one can
-take about causality. The first extreme view --- which would seem to
+As with so many other things, there are extreme views that one can
+take about causality. One extreme view --- which would seem to
 validate common sense --- is that the cause-effect relation is part of
-the fundamental fabric of reality; and, as such, this relation is of
-central concern to science. In fact, one might go so far as to say
-that it's one of the primary goals of science to uncover the causal
-structure of the world \citep[see][]{salmon1984}.
+the fundamental fabric of reality; and, as such, it is of central
+concern to science. In fact, some philosophers contend that the
+primary goal of science is to uncover the causal structure of the
+world \citep[see][]{salmon1984}.
 
-The second extreme view --- championed by the empiricist David Hume,
-and later by Bertrand Russell --- is that:
+Some philosophers have gone to the opposite extreme, and have argued
+that cause and effect have no place in a scientific worldview:
 \begin{quote}
   The law of causality, I believe, like much that passes muster among
   philosophers, is a relic of a bygone age, surviving, like the
@@ -168,7 +174,16 @@ the intuitions that Bohr had.
 
 \afsnit Chronology.
 
-Considering giving up momentum conservation 
+Considering giving up momentum conservation ... again later in the
+1930s.
+
+``With the foregoing analysis we have described the new point of view
+brought forward by the quantum theory. Sometimes one has described it
+as leaving aside the idea of causality. I think we should rather say
+that in the quantum theory we try to express some laws of nature which
+lie so deep that they cannot be visualis- ed, or, which cannot be
+accounted for by the usual description in terms of motion''
+(space-time-continuity)
 
 \afsnit Bohr has two articles that are ostensibly devoted to the
 question of causality in physics: ``causality and complementarity''
@@ -180,6 +195,9 @@ notions of causality and complementarity'' (1948).
 \afsnit Differential equations. Schrodinger equation versus collapse
 
 \afsnit Discontinuity. Acausal? Does Bohr use the word acausal?
+
+Høffding writes late in life about what QM does to the causality
+concept. See Positivismens Tidsalder.
 
 \afsnit ``causal interpretation'' 
 
